ghc-6.2/hslibs/win32/Win32Window_stub_ffi.h

extern DWORD prim_dCX_WINDOW();
extern DWORD prim_dCX_CACHE();
extern DWORD prim_dCX_CLIPCHILDREN();
extern DWORD prim_dCX_CLIPSIBLINGS();
extern DWORD prim_dCX_PARENTCLIP();
extern DWORD prim_dCX_EXCLUDERGN();
extern DWORD prim_dCX_INTERSECTRGN();
extern DWORD prim_dCX_LOCKWINDOWUPDATE();
extern void* prim_getDCEx(HWND arg1,HRGN arg2,DWORD arg3);
extern HDC access_prim_getDCEx_res1(HsPtr);
extern int access_prim_getDCEx_gc_failed(HsPtr);
extern void* access_prim_getDCEx_gc_failstring(HsPtr);
extern void* prim_getDC(HWND arg1);
extern HDC access_prim_getDC_res1(HsPtr);
extern int access_prim_getDC_gc_failed(HsPtr);
extern void* access_prim_getDC_gc_failstring(HsPtr);
extern void* prim_getWindowDC(HWND arg1);
extern HDC access_prim_getWindowDC_res1(HsPtr);
extern int access_prim_getWindowDC_gc_failed(HsPtr);
extern void* access_prim_getWindowDC_gc_failstring(HsPtr);
extern void* prim_releaseDC(HWND arg1,HDC arg2);
extern int access_prim_releaseDC_gc_failed(HsPtr);
extern void* access_prim_releaseDC_gc_failstring(HsPtr);
extern void* prim_getDCOrgEx(HDC arg1);
extern LONG access_prim_getDCOrgEx_gc_res1(HsPtr);
extern LONG access_prim_getDCOrgEx_gc_res2(HsPtr);
extern int access_prim_getDCOrgEx_gc_failed(HsPtr);
extern void* access_prim_getDCOrgEx_gc_failstring(HsPtr);
extern void* prim_hideCaret(HWND arg1);
extern int access_prim_hideCaret_gc_failed(HsPtr);
extern void* access_prim_hideCaret_gc_failstring(HsPtr);
extern void* prim_showCaret(HWND arg1);
extern int access_prim_showCaret_gc_failed(HsPtr);
extern void* access_prim_showCaret_gc_failstring(HsPtr);
extern void* prim_createCaret(HWND arg1,HBITMAP arg2,INT arg3,INT arg4);
extern int access_prim_createCaret_gc_failed(HsPtr);
extern void* access_prim_createCaret_gc_failstring(HsPtr);
extern void* prim_destroyCaret();
extern int access_prim_destroyCaret_gc_failed(HsPtr);
extern void* access_prim_destroyCaret_gc_failstring(HsPtr);
extern void* prim_getCaretPos();
extern LONG access_prim_getCaretPos_gc_res1(HsPtr);
extern LONG access_prim_getCaretPos_gc_res2(HsPtr);
extern int access_prim_getCaretPos_gc_failed(HsPtr);
extern void* access_prim_getCaretPos_gc_failstring(HsPtr);
extern void* prim_setCaretPos(LONG gc_arg2,LONG gc_arg3);
extern int access_prim_setCaretPos_gc_failed(HsPtr);
extern void* access_prim_setCaretPos_gc_failstring(HsPtr);