ghc-6.2/hslibs/win32/Win32Window.hs


foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_dCX_WINDOW" dCX_WINDOW :: GetDCExFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_dCX_CACHE"  dCX_CACHE :: GetDCExFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_dCX_CLIPCHILDREN" dCX_CLIPCHILDREN :: GetDCExFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_dCX_CLIPSIBLINGS" dCX_CLIPSIBLINGS :: GetDCExFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_dCX_PARENTCLIP" dCX_PARENTCLIP :: GetDCExFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_dCX_EXCLUDERGN" dCX_EXCLUDERGN :: GetDCExFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_dCX_INTERSECTRGN" dCX_INTERSECTRGN :: GetDCExFlags
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_dCX_LOCKWINDOWUPDATE" dCX_LOCKWINDOWUPDATE :: GetDCExFlags

-- apparently mostly fails if you use invalid hwnds
getDCEx :: HWND -> HRGN -> GetDCExFlags -> IO HDC
getDCEx arg1 arg2 arg3 =
  prim_getDCEx arg1 (unsafeForeignPtrToPtr arg2) arg3
  >>= \ gc_result ->
  access_prim_getDCEx_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getDCEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getDCEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getDCEx" prim_getDCEx :: Addr -> Ptr () -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getDCEx_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getDCEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getDCEx_gc_failstring :: Addr -> IO (Addr)

getDC :: MbHWND -> IO HDC
getDC arg1 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  prim_getDC arg1
  >>= \ gc_result ->
  access_prim_getDC_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getDC_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getDC_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getDC" prim_getDC :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getDC_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getDC_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getDC_gc_failstring :: Addr -> IO (Addr)

getWindowDC :: MbHWND -> IO HDC
getWindowDC arg1 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  prim_getWindowDC arg1
  >>= \ gc_result ->
  access_prim_getWindowDC_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getWindowDC_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getWindowDC_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getWindowDC" prim_getWindowDC :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getWindowDC_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getWindowDC_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getWindowDC_gc_failstring :: Addr -> IO (Addr)

releaseDC :: MbHWND -> HDC -> IO ()
releaseDC arg1 arg2 =
  (case arg1 of {
      Nothing -> (return (nullHANDLE));
      (Just arg1) -> (return ((arg1)))
   }) >>= \ (arg1) ->
  prim_releaseDC arg1 arg2
  >>= \ gc_result ->
  access_prim_releaseDC_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_releaseDC_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_releaseDC" prim_releaseDC :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_releaseDC_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_releaseDC_gc_failstring :: Addr -> IO (Addr)

getDCOrgEx :: HDC -> IO POINT
getDCOrgEx arg1 =
  prim_getDCOrgEx arg1
  >>= \ gc_result ->
  access_prim_getDCOrgEx_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getDCOrgEx_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getDCOrgEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getDCOrgEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2)))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getDCOrgEx" prim_getDCOrgEx :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getDCOrgEx_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getDCOrgEx_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getDCOrgEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getDCOrgEx_gc_failstring :: Addr -> IO (Addr)

----------------------------------------------------------------
-- Caret
----------------------------------------------------------------

hideCaret :: HWND -> IO ()
hideCaret arg1 =
  prim_hideCaret arg1
  >>= \ gc_result ->
  access_prim_hideCaret_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_hideCaret_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_hideCaret" prim_hideCaret :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_hideCaret_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_hideCaret_gc_failstring :: Addr -> IO (Addr)

showCaret :: HWND -> IO ()
showCaret arg1 =
  prim_showCaret arg1
  >>= \ gc_result ->
  access_prim_showCaret_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_showCaret_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_showCaret" prim_showCaret :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_showCaret_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_showCaret_gc_failstring :: Addr -> IO (Addr)

-- ToDo: allow arg2 to be NULL or {(HBITMAP)1}
createCaret :: HWND -> HBITMAP -> MbINT -> MbINT -> IO ()
createCaret arg1 arg2 arg3 arg4 =
  (case arg3 of {
      Nothing -> (return (0));
      (Just arg3) -> (return ((arg3)))
   }) >>= \ (arg3) ->
  (case arg4 of {
      Nothing -> (return (0));
      (Just arg4) -> (return ((arg4)))
   }) >>= \ (arg4) ->
  prim_createCaret arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_createCaret_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_createCaret_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_createCaret" prim_createCaret :: Addr -> Addr -> Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_createCaret_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_createCaret_gc_failstring :: Addr -> IO (Addr)

destroyCaret :: IO ()
destroyCaret =
  prim_destroyCaret
  >>= \ gc_result ->
  access_prim_destroyCaret_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_destroyCaret_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_destroyCaret" prim_destroyCaret :: IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_destroyCaret_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_destroyCaret_gc_failstring :: Addr -> IO (Addr)

getCaretPos :: IO POINT
getCaretPos =
  prim_getCaretPos
  >>= \ gc_result ->
  access_prim_getCaretPos_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_getCaretPos_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_getCaretPos_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getCaretPos_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return ((gc_res1,gc_res2)))
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_getCaretPos" prim_getCaretPos :: IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getCaretPos_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getCaretPos_gc_res2 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getCaretPos_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_getCaretPos_gc_failstring :: Addr -> IO (Addr)

setCaretPos :: POINT -> IO ()
setCaretPos gc_arg1 =
  case gc_arg1 of { (gc_arg2,gc_arg3) ->
  prim_setCaretPos gc_arg2 gc_arg3
  >>= \ gc_result ->
  access_prim_setCaretPos_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setCaretPos_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))}
foreign import  ccall unsafe "Win32Window_stub_ffi.h prim_setCaretPos" prim_setCaretPos :: Int32 -> Int32 -> IO (Addr)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_setCaretPos_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Window_stub_ffi.h" access_prim_setCaretPos_gc_failstring :: Addr -> IO (Addr)

-- The remarks on SetCaretBlinkTime are either highly risible or very sad -
-- depending on whether you plan to use this function.

----------------------------------------------------------------
-- MSGs and event loops
--
-- Note that the following functions have to be reentrant:
--
--   DispatchMessage
--   SendMessage
--   UpdateWindow   (I think)
--   RedrawWindow   (I think)
--
-- The following dont have to be reentrant (according to documentation)
--
--   GetMessage
--   PeekMessage
--   TranslateMessage
--
-- For Hugs (and possibly NHC too?) this is no big deal.
-- For GHC, you have to use casm_GC instead of casm.
-- (It might be simpler to just put all this code in another
-- file and build it with the appropriate command line option...)
----------------------------------------------------------------

-- type MSG = 
--   ( HWND   -- hwnd;	
--   , UINT   -- message;
--   , WPARAM -- wParam;
--   , LPARAM -- lParam;
--   , DWORD  -- time;
--   , POINT  -- pt;
--   )

type LPMSG   = Addr
